<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.zipper.wallet.definecontrol.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_icon_visible="visible"
        app:right_text="@string/import_wallet"
        app:title_text="@string/create_wallet"
        >

    </com.zipper.wallet.definecontrol.TitleBarView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_name"
            android:textSize="14sp"
            android:textColor="@color/text_major"/>

        <EditText
            android:id="@+id/ed_name"
            android:layout_marginLeft="-4dp"
            android:layout_marginTop="20dp"
            style="@style/EditText_register"
            android:layout_marginRight="30dp"
            android:textColor="@color/text_major"
            android:textColorHint="@color/text_hint"
            android:hint="@string/wallet_hint"
            android:text=""
            android:singleLine="true"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"

            android:background="@drawable/btn_ripple_blue_corner"
            android:enabled="false"
            android:text="@string/next"
            android:textColor="@color/white"/>
    </LinearLayout>


</LinearLayout>
