<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zipper.wallet.definecontrol.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_icon_visible="visible"
        app:title_visible="gone"
        app:right_text="@string/import_wallet"
        app:title_text="@string/create_wallet">

    </com.zipper.wallet.definecontrol.TitleBarView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="14sp"
                android:text="@string/pwd_work"
                android:textColor="@color/text_minor" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="钱包密码"
                android:textSize="14sp"
                android:textColor="@color/text_major" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <LinearLayout
                    android:id="@+id/lin_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:src="@mipmap/warning"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwd_warning"
                        android:textColor="@color/btn_delete" />
                </LinearLayout>

                <EditText
                    android:id="@+id/ed_pwd"
                    style="@style/EditText_register"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:hint="钱包密码"
                    android:textSize="16sp"
                    android:paddingLeft="0dp"
                    android:textColor="@color/text_major"
                    android:textColorHint="@color/text_hint"
                    android:inputType="textPassword"/>

                <LinearLayout
                    android:id="@+id/lin_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/item_lin_height"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/txt_strong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/img_pwd_sign"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:src="@mipmap/pwd_n"/>
                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="重复钱包密码"
                android:textColor="@color/text_major" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <TextView
                    android:id="@+id/txt_pwdre_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/pwd_warning"
                    android:textColor="@color/btn_delete"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/ed_repeat"
                    style="@style/EditText_register"
                    android:layout_alignParentBottom="true"
                    android:hint="重复钱包密码"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:paddingLeft="0dp"
                    android:textColor="@color/text_major"
                    android:textColorHint="@color/text_hint"
                    />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pwd_tip"
                android:visibility="gone"
                android:textColor="@color/text_major" />

            <EditText
                android:id="@+id/ed_pwd_tip"
                style="@style/EditText_register"
                android:layout_marginTop="20dp"
                android:hint="@string/not_must"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingLeft="-3dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_agree"
                    android:textSize="14sp"
                    android:textColor="@color/text_major"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_agree"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/service_clause"
                    android:textSize="14sp"
                    android:textColor="@color/btn_normal" />


            </LinearLayout>


            <Button
                android:id="@+id/btn_create"
                android:layout_width="125dp"
                android:layout_height="45dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="@dimen/corner_10"
                android:background="@drawable/btn_ripple_blue_corner"
                android:enabled="false"
                android:text="@string/create"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
